saabpi_errors.log
  File "/home/pi/saabpi/saabpi.py", line 302
    global GPSheading
    ^^^^^^^^^^^^^^^^^
SyntaxError: name 'GPSheading' is used prior to global declaration
